legacy/v1.1.12-beta/README.zh-CN.md
# B站屏蔽助手

这是我自己在用的一个 B 站网页端扩展。给不想看的视频标题加几个关键词，它们就从页面上消失；另外也能按分区屏蔽直播、番剧这类推广内容。

Manifest V3，Edge 和 Chrome 都能装，纯 JavaScript，没有运行时依赖。

![version](https://img.shields.io/badge/version-1.1.12--beta-orange)
![browser](https://img.shields.io/badge/Edge%20%7C%20Chrome-Chromium-00aeec)
![tests](https://img.shields.io/badge/tests-192%20passed-brightgreen)

---

## 安装

1. 到 [Releases](https://github.com/ke25019/bili-title-filter/releases) 下载最新那个 zip，解压到一个固定的目录（别放下载文件夹里，容易被清理掉）
2. Edge 打开 `edge://extensions/`，左下角打开「开发人员模式」
3. 点「加载解压缩的扩展」，选择解压出来、里面有 `manifest.json` 的那一层目录

Chrome 用 `chrome://extensions/`，步骤一样。

装好之后打开 B 站，标题栏附近会出现一个「屏蔽助手」按钮。点它可以拖到任意位置，位置会记住。

---

## 怎么用

点浏览器工具栏的图标，或者点 B 站页面上那个「屏蔽助手」按钮，都能打开设置。最常用的就一个输入框：把不想看的词打进去、回车。也支持一次贴多个，用逗号或空格分开。

匹配方式可以调：区分大小写、按正则匹配、是否连 UP 主名字一起匹配。改动立刻生效，已经打开的 B 站页面会自动重新扫一遍。

---

## 两种屏蔽效果

**整体遮蔽** —— 封面和标题合并成一整块，上面写着「根据您的屏蔽词已将此视频屏蔽」。鼠标移上去会自动把视频露出来，移开又恢复。文案可以自己改。

**完全隐藏** —— 视频直接不显示了。这里我默认按最早那版（v1.0.0）的做法来：只把内容藏起来、**位置留空**。这样页面不会重排，也不会把 B 站末尾那些空的骨架占位块顶到内容中间来。

如果你更想要紧凑的效果，可以在面板里关掉「隐藏时保留原位置」，卡片就会整个从布局里拿掉，后面的内容往前补位。两种都行，看你习惯哪个。

---

## 屏蔽分区推广

除了按标题，还能整类屏蔽这些推广：直播、番剧、影视、课堂、专栏、动态、漫画、游戏、音乐、赛事、会员购、活动、广告。

最后还有一个「其他推广」的兜底，用来收掉那些不属于上面任何一类的推广卡片（比如客户端下载、其它频道的推广）。它只在这张卡没有命中上面任何一类时才生效——所以你把「直播」关掉，不会被兜底规则又抓回来。

首页顶部那个大轮播横幅是单独一个开关，只作用于首页那一块，跟上面的勾选互不影响。

识别分区卡片这件事我没有写死某一个 class，而是按这个顺序判断：

1. 先看卡片里的链接指向哪（`live.bilibili.com`、`/bangumi/play/`、`/cheese/play/`……）
2. 已知的卡片类名优先（`.feed-card`、`.bili-video-card` 这些）
3. 有些区域用的是 BEM 命名，就把 `bili-live-card__image--link` 这种子元素回推到卡片根
4. 都不是的话，往上找到第一层「同时包含标题和封面」的元素当卡片本体
5. 顶栏导航和几个藏着隐藏推广链接的区域是明确排除的

判断不出来的时候我宁愿不屏蔽，也不想把页面搞乱。所以有几个安全阀：容器里还装着别的卡片、尺寸超过 1200×800 或视口面积的 35%、元素尺寸是 0——任一命中就直接跳过。

---

## 页面上的悬浮面板

不想每次都开扩展设置页，所以我做了一个页面内面板。切到「完全隐藏」时，里面会多出「隐藏时保留原位置」这个开关。

面板可以按住拖动，位置存在浏览器里，底部有「重置位置」可以回到默认的标题栏右侧。

---

## 深色模式

遮蔽区域和面板会跟着 B 站的深色模式走。判断方式是看 `<html>` 上的 `dark` 属性 / `data-theme` / class，兜底再看页面背景色的亮度。也可以手动锁定成浅色或深色。

---

## 目录结构

```
bili-title-filter/
├── manifest.json          扩展清单
├── background.js          Service Worker：统计、徽标、默认值
├── shared/defaults.js     默认配置 + 分区类型定义（含识别规则）
├── content/
│   ├── content.js         扫描、匹配、屏蔽，以及页面内的悬浮面板
│   └── content.css        遮蔽区域、隐藏、深色模式的样式
├── popup/                 工具栏弹窗
├── options/               完整设置页
├── tests/                 jsdom 测试脚本（不参与扩展运行）
├── legacy/                旧版本源码归档，每个子目录都能单独加载
└── icons/
```

---

## 自己跑测试

```bash
cd tests
npm install
npm test
```

一共 192 项校验，覆盖屏蔽逻辑、分区识别、两种隐藏行为、设置页交互和后台统计。

测试里的模拟 DOM 和尺寸都是从真实页面上量出来的（`.floor-card-inner > .cover-container + .pb-16.px-12 > p.title` 这种工具类结构、`.vui_carousel` 包裹的轮播、`.palette-button-inner` 里 0×0 的隐藏链接等等）。

需要真实浏览器才能复现的问题，我用 `tests/browser-harness/` 里的脚本起一个独立的无头 Edge 来看，它只会关掉自己那个 profile 的进程。

---

## 常见问题

**勾了某个分区，但页面上还有该分区的内容？**
分区屏蔽现在只做卡片级。判断不出「封面 + 标题」在哪张卡上时我会直接跳过，所以少量结构特殊的推广位可能不会被处理。如果那是首页顶部的大轮播图，用那个单独的开关。

**有些推广卡片不属于我列的任何一类？**
打开「其他推广」兜底。它只在这张卡没命中具体分区时才生效。

**为什么有的视频没被屏蔽？**
先确认关键词确实在标题里。开了「区分大小写」或「正则」的话匹配会更严。也可以在设置页打开调试日志，在 B 站页面的控制台看命中情况。

**会不会拖慢页面？**
扫描用的是 `MutationObserver` 加 180ms 防抖，只处理新增或被改动的卡片。分区识别只在你开了对应开关时才跑，而且有数量和频率上限。

**统计数字比实际看到的多？**
B 站是单页应用，滚动和切页会让卡片重新渲染，所以统计的是「屏蔽次数」的近似值。

---

## 更新记录

按时间倒序。这里记的是每次改了什么、为什么改，包括我自己搞错的地方。

### 1.1.12

上一版我说「外层容器会一起隐藏」，其实**那段代码根本没生效**。CSS 里写的是 `.bf-blocked.bf-hide` 和 `.bf-blocked.bf-hide-slot`，而外层容器只拿到 `bf-hide` / `bf-hide-slot`，它永远不会有 `bf-blocked`。类名打上去了，样式一条都没命中 —— 所以卡片内容消失、带边框和阴影的白壳还留在页面上，就是一直反馈的「占位符没删干净」。现在这两条规则改成裸类名，并且**复核方式也换了**：不再只看类名有没有打上，而是读浏览器算出来的 `display` / `visibility`，看不到实际效果就算失败（这次就是这么把它抓出来的）。

同一张卡片（首页「分区推荐」里那条番剧推广）还牵出另一个问题：封面左上角的徽标 `.badge > .floor-title`（文案正是「番剧」）跟标题选择器同名，而且就在封面链接内部。后果有两个：卡片识别会在封面链接上就停下，把**一个链接当成一整张卡片**；关键词拿到的「标题」其实是「番剧」两个字，真正的标题被完全忽略。现在徽标文字一律不算标题，卡片正确定位到 `.floor-card-inner`，关键词也回到真正的标题上。

顺手补了两处发现路径：筛候选卡片时不再只看设置里打开的那几个分区开关（否则只开「直播」时，番剧推广卡片永远扫不到），懒加载插入的推广卡片会立刻触发一次扫描，不用等滚动。

最后在隔离实例上按真实页面逐层复核时又抓到一个：**首页分区推荐里的直播卡片一直就没被屏蔽过**。标题判据里有一条「标题元素的后代不超过 4 个」，而直播卡片的标题里塞着「直播中」角标 —— `<div class="living">` 套 `<picture>`，里面还有两个 `<source>` 和一个 `<img>`，再加上 `<span>`，实测 8 个后代元素，整条标题直接被判掉，卡片因此完全识别不出来。上限放宽到 12 之后直播卡片正常命中：真实页面上 7 张带分区徽标的卡片现在全部被屏蔽（直播、番剧、国创、综艺、课堂、电影……）。这条上限是按实测的 8 改的，不是拍的。

### 1.1.11

按提示去翻了 bilibili.com 的页面源码，把用灰色占位色（`--graph_bg_regular`）的元素都列了出来：`.floor-card`（带边框和阴影）、`.recommended-swipe-body`（左上角大块里铺满灰底的 body）、`.layer.tiny`、`.bili-video-card__image--wrap`、`.v-img`、各种 `__skeleton--*`，以及轮播里空的 `.extension-tips-v2`。

它们全都藏在卡片容器里面，所以要靠「隐藏卡片时把容器一起处理」来覆盖。上一版的做法有个漏洞：**容器里装着不止一张卡片时我会提前停下**，于是容器自己的灰底就露出来了。现在改成——只要容器里的卡片**全都被隐藏了**，而且除了这些卡片没有别的真实内容，就继续往上把容器一起处理。容器的判定每次都会重算，所以同一容器里第二张卡被隐藏时容器也会跟着藏起来。

顺带发现一个更要紧的问题：尺寸安全阀原来定的是「超过 1100×700 或视口 15% 就跳过」，而左上角那个 2 列大块实测是 580×485、约占视口 25% —— **意味着那个位置里的视频从来就没被屏蔽过**。现在放宽到 1200×800 / 35%，既能覆盖它，也仍然拦得住真正的灾难（实测过的 1401×808 整页容器）。
### 1.1.10

有人在反馈里贴了一张截图，上面那条淡边线让我找到了问题。B 站的分区推广卡片外面还套着一层 `.floor-card`，带边框、白底和 40px 阴影，而卡片本体在里面。我之前只把隐藏打在本体上，所以内容没了、外壳还留在页面上——保留位置和前移补位两种模式都有这个问题。

现在会从卡片往上找到「只装着这一张卡」的最外层容器，隐藏时一起处理：保留位置时给它 `visibility:hidden`（边框、背景、阴影一起消失，位置还留着），前移补位时给它 `display:none`（整个网格项拿掉，不留空框）。

### 1.1.9

修上一版留下的白色空盒子。之前「保留位置」是把卡片的**子元素**藏起来，卡片自己的背景和边框还在，看起来就是个空的白盒子。v1.0.0 之所以自然，是因为它藏的是里面那张卡、外层没有背景。现在改成对卡片自身 `visibility:hidden`，位置留着、连背景边框一起消失。

### 1.1.8

把「前移补位」这条路径整个过了一遍，修掉五个问题：找网格只看直接父元素（隔一层就找不到）、每次都先清空类再加（滚动时抖）、判定空占位要求没有 `<img>`（带未加载图片的骨架漏判）、只扫直接子元素（嵌在楼层里的漏掉）、以及无差别隐藏空元素（可能藏掉撑高度的容器）。另外把定时复核从 2.5s 收到 1.5s。

### 1.1.7

收到反馈说只有 v1.0.0 的完全隐藏好用，我就把两个版本用同一份真实 DOM 跑起来对比，找到了原因：v1.1.0 我把 `.bili-feed-card` 加进了卡片选择器，隐藏目标从「卡片内容」变成了「整个网格项」，网格因此重排，腾出的格子被 B 站末尾的空骨架占位块填上。于是加了「隐藏时保留原位置」开关，默认按 v1.0.0 的行为来。

### 1.1.6

修一个我自己引入的 bug：尺寸安全阀用「命中原因是否相同」做判断，而完全隐藏时卡片是 `display:none`（尺寸为 0），命中词一变就会被安全阀拒绝处理，切回遮蔽后卡片再也不恢复。顺带发现 `hasLayoutEngine()` 的结果被永久缓存，如果第一次调用时 `body` 还没渲染好，安全阀会整场失效。

### 1.1.5

修完全隐藏时内容中间冒出的灰色空块。B 站的推荐流网格末尾放着一批只含骨架屏的空占位项，我把前面的卡片隐藏后，网格会把它们拉到前面填空。现在在「前移补位」模式下会把这类空占位项一起收敛（加载哨兵只做隐身、保留布局盒，不影响继续加载）。

### 1.1.4

用无头 Edge 实测后重写了分区识别。之前「活动」一开就整页被过滤——从隐藏的 0×0 推广链接向上跳了三层，落到了一个 1401×808 的侧边按钮容器上。分区推广的封面和标题之前也被分开遮蔽（真实卡片用的是工具类名，不是 BEM）。这一版把「整行板块」删掉了，改成单独的「屏蔽首页顶部轮播横幅」开关。

### 1.1.3

第一次补分区类型（9 类补到 14 类，加了「其他推广」兜底），也想修页面空白的问题——但没修对，真正的根因是 1.1.4 才找到的。

### 1.1.0

分区推广屏蔽之前完全没效果，因为只按 class 判断。这一版改成从卡片里的链接反推类型。同时把整体遮蔽改成鼠标悬停自动展示，悬浮按钮也支持拖动了。

### 1.0.0

第一个版本：按标题屏蔽词屏蔽视频，两种屏蔽方式，9 类分区推广，页面内面板，深色模式。

---

## 关于

仓库目前没有开源协议，如果你想在别的地方用，先开个 Issue 说一声。
